--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Node.js server with CRUD operations and JWT",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,15 @@
   "bugs": {
     "url": "https://github.com/5Mountains/crystal-simple-server/issues"
   },
-  "homepage": "https://github.com/5Mountains/crystal-simple-server#readme"
+  "homepage": "https://github.com/5Mountains/crystal-simple-server#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "high-level": "^1.0.4",
+    "nedb-promises": "^6.1.0",
+    "nodemon": "^2.0.19",
+    "uuid": "^9.0.0"
+  }
 }
