--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "high-level": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "nedb-promises": "^6.1.0",
     "nodemon": "^2.0.19",
     "uuid": "^9.0.0"
